feat: Added Custom SVG and update creattion of goods receipt and manifest

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>freightmaster-flow-ui</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>FreightMaster Flow</title>
+    <meta name="description" content="FreightMaster Logistics Management UI" />
+    <meta name="author" content="FreightMaster Team" />
 
-    <meta property="og:title" content="freightmaster-flow-ui" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="FreightMaster Flow" />
+    <meta property="og:description" content="Modern logistics management for your fleet." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/truck-favicon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@freightmaster" />
+    <meta name="twitter:image" content="/truck-favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/truck-favicon.svg" />
   </head>
 
   <body>
